--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "next": "12.3.4",
-    "node-fetch": "2.6.13",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "0.27.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^16.1.0",
+    "node-fetch": "2.6.13",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
