--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "crons": [
     {
-      "path": "/api/cron/ping",
+      "path": "/api/cron-ping",
       "schedule": "*/10 * * * *"
     }
   ]
